<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    card_view:cardBackgroundColor="@color/cardview_dark_background"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="100dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cardview_dark_background"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="@color/cardview_dark_background"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="42dp"
            android:layout_height="34dp"
            android:padding="2dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/t1"
            android:layout_width="350dp"
            android:layout_height="38dp"
            android:padding="5dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:text="@string/name"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>

        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="361dp" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:text="@string/title"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/t3"
            android:layout_width="match_parent"
            android:layout_height="67dp"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:text="@string/description"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="italic" />
    </LinearLayout>
</androidx.cardview.widget.CardView>