<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_google_signin_btn_text_dark_focused"
    tools:context=".PostActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_secondary_variant"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginBottom="144dp"
        android:fontFamily="serif"
        android:text="Create Post"
        android:textColor="@color/cardview_light_background"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="@+id/toolbar2"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="163dp"
        android:layout_height="125dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="195dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="411dp"
        android:contentDescription="@string/upload_video"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_slideshow" />

    <EditText
        android:id="@+id/t1"
        android:layout_width="210dp"
        android:layout_height="37dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="286dp"
        android:autofillHints=""
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/t2"
        android:layout_width="216dp"
        android:layout_height="65dp"
        android:layout_marginStart="102dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="102dp"
        android:layout_marginBottom="26dp"
        android:autofillHints=""
        android:background="@color/cardview_dark_background"
        android:ems="10"
        android:hint="@string/description"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/b1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t1" />

    <Button
        android:id="@+id/b1"
        android:layout_width="118dp"
        android:layout_height="54dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="101dp"
        android:background="@color/colorAccent"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/t2" />

    <ImageButton
        android:id="@+id/backButton"
        style="@style/Widget.AppCompat.ImageButton"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:background="@color/design_default_color_secondary_variant"
        android:tint="@color/cardview_light_background"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="@+id/toolbar2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01999998"
        app:srcCompat="@drawable/abc_vector_test"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>